# CppMonadic

./: CMakeLists.txt  README.md  behavior.h  chain.h  effect.h  main.cc  maybe.h  monad.h  observable.h  pure-bind-monad.h  reader.h  single-execution.h  task.h  task2.h
test/: chain.cpp  effect.cpp  maybe.cpp  observable.cpp  reader.cpp  single-execution.cpp  task.cpp
